# Seed-Phrase-Generator-with-Multi-Source-Entropy

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  SECURITY.md  pyproject.toml  seed.py  seedgen.py
.github/workflows/: tests.yml
entropyseed/: __init__.py  bip39.py  cli.py  crypto.py  entropy.py  selftest.py
legacy/: README.md  seed.py
tests/: test_bip39.py  test_cli.py  test_crypto.py  test_entropy.py
