[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "entropyseed"
version = "2.2.0"
description = "Offline BIP39 mnemonic generator with mandatory OS CSPRNG entropy."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "entropyseed maintainers" }
]
keywords = ["bip39", "mnemonic", "entropy", "offline"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security :: Cryptography",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
entropyseed = "entropyseed.cli:main"

[tool.setuptools]
packages = ["entropyseed"]

[tool.setuptools.package-data]
entropyseed = ["wordlist_english.txt"]
